"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Fix branch GTK-V2 client issue [ 1876788 ] Doubled characters in GTK clients
(unusable).  Tested with --enable-cfgtk2 compiled as RPM.
  gtk-v2/src/keys.c
Kevin Bulgrien 2008-12-17

Complete fixing GTK-V1 issue [ 1876788 ] Doubled characters in GTK clients
(unusable).  Tested with --enable-cfgtk2 compiled as RPM.
  gtk/keys.c
Kevin Bulgrien 2008-12-16

gtk_signal_emit_stop_by_name() was poorly placed and is moved to a location
where it will help fix the [ 1876788 ] Doubled characters in GTK clients
(unusable) for the GTK-V1 client.
  gtk/keys.c
Kevin Bulgrien 2008-12-13

Fix for [ 2022488 ] 2.x GTKv1 client built with --enable-cfgtk2 cannot login
and set [ 1862055 ] GTKv1 client built with --enable-cfgtk2 cannot login as
Pending.  It is no longer necessary to run the client with Popup Windows.
1862055 was reported against the Windows client, but I cannot build it to
test, though there is no reason it should not work there.
  gtk/keys.c
Kevin Bulgrien 2008-12-13

Fix bug #1871476:] client script 'watch stats' error.
 common/script.c: don't work on initial length, as it'll affect other scripts.
  Make parameters const to avoid issues.
 common/script.h: change function definition.
Nicolas Weeger 2008-05-09

Apply patch #1878451: Let crossfire client compile with OSS4's soundcard.h
Courtesy anonymous.
 sound-src/cfsndserv.c
 Nicolas Weeger 2008-05-07


Changes for 1.11.0:
------------------------------------------------------------------------------
configure.in: Trunk revision 6524 merge of mwedel's add another eval $ndatadir
  line so properly resolve all the shell variable names so that CF_DATADIR is
  set properly in common/config.h.
gtk/gx11.c: Merge Nicolas Weeger's fix memory leak from trunk revision 6771.
Bring in relevant changes from trunk revision 7108.
  Added to svn:ignore: config.log Makefile autom4te.cache